--- a/src/WebSite/ClnqWebSite/src/index.html
+++ b/src/WebSite/ClnqWebSite/src/index.html
@@ -1,5 +1,7 @@
 <html lang="en">
     <head>
+        <title>Docteur</title>
+        <base href="/">
         <!-- ... -->
     </head>
     <body class="dx-viewport">
